--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   "homepage": "https://github.com/vjnnxx/sda-project#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "mysql": "^2.18.1",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
