--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/vjnnxx/sda-project#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "consign": "^0.1.6",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
